--- a/public/locales/fr/translation.json
+++ b/public/locales/fr/translation.json
@@ -272,107 +272,118 @@
     "storeImages": "Images du magasin",
     "storeImage": "Image du magasin"
   },
- "employees": {
-  "loading": "Chargement des employés...",
-  "error": "Erreur lors de la récupération des employés",
-  "noData": "Aucun employé trouvé",
-
-  "name": "Nom",
-  "gender": "Sexe",
-  "selectGender": "Sélectionner le sexe",
-  "male": "Homme",
-  "female": "Femme",
-
-  "birth": "Date / Lieu de naissance",
-  "dateOfBirth": "Date de naissance",
-  "placeOfBirth": "Lieu de naissance",
-  "nationality": "Nationalité",
-  "selectNationality": "Sélectionner la nationalité",
-
-  "status": "Statut",
-  "actions": "Actions",
-  "view": "Voir",
-  "edit": "Modifier",
-  "addNew": "Ajouter un employé",
-
-  "user": "Utilisateur",
-  "email": "Email",
-  "password": "Mot de passe",
-  "role": "Rôle",
-  "roleDefault": "Employé",
-  "roleAdmin": "Administrateur",
-  "roleManager": "Manager",
-
-  "identity": "Identité",
-  "firstName": "Prénom",
-  "lastName": "Nom",
-
-  "contract": "Contrat & Poste",
-  "contractType": "Type de contrat",
-  "selectContract": "Sélectionner le type de contrat",
-  "department": "Département",
-  "selectDepartment": "Sélectionner le département",
-  "baseSalary": "Salaire de base",
-  "position": "Poste",
-  "selectPosition": "Sélectionner le poste",
-  "contractStartDate": "Date de début du contrat",
-  "contractEndDate": "Date de fin du contrat",
-  "employeeCategory": "Catégorie d’employé",
-
-  "family": "Informations familiales",
-  "maritalStatus": "Statut matrimonial",
-  "selectMaritalStatus": "Sélectionner le statut matrimonial",
-  "single": "Célibataire",
-  "married": "Marié(e)",
-  "widowed": "Veuf(ve)",
-  "spouseName": "Nom du conjoint",
-  "address": "Adresse",
-  "phoneNumbers": "Numéro(s) de téléphone",
-
-  "bankInfo": "Informations bancaires",
-  "bankName": "Banque",
-  "selectBank": "Sélectionner la banque",
-  "bankAccountNumber": "Numéro de compte",
-  "socialSecurityNumber": "Numéro de sécurité sociale",
-  "insuranceNumber": "Numéro d’assurance",
-
-  "city": "Ville",
-  "country": "Pays",
-  "storeId": "Magasin",
-
-  "save": "Enregistrer",
-  "saving": "Enregistrement...",
-  "required": "Champ obligatoire",
-  "passwordMin": "Minimum 6 caractères",
-  "errorSubmit": "Erreur lors de la création de l’employé",
-  "confirmDelete":"Voulez Suprimer l'utilisateur? ",
-
-  "createUser": "Créer un compte utilisateur",
-  "createUserForEmployee": "Créer des identifiants de connexion pour cet employé",
-  "userCreated": "Le compte utilisateur a été créé et lié à cet employé avec succès",
-  "userExists": "Cet employé a déjà un compte utilisateur",
-  "deteleEmployee": "Supprimer l’employé",
-  "deleteTitle": "Supprimer ",
-
-  "submit": "Créer",
-  "cancel": "Annuler",
-
-
-  "disableUser": "Désactiver le compte utilisateur",
-  "enableUser": "Activer le compte utilisateur",
-  "userDisabled": "Le compte utilisateur a été désactivé",
-  "deleteUser":"Suprimer l'utilisateur",
-
-  "editEmployee": "Modifier l’employé",
-  "editSuccess": "Employé modifié avec succès",
-  "editError": "Erreur lors de la modification de l’employé",
-  "deleteConfirm": "Voulez-vous vraiment supprimer cet employé ?",
-  "deleteSuccess": "Employé supprimé avec succès",
-  "deleteError": "Erreur lors de la suppression de l’employé",
-  "viewEmployee": "Détails de l’employé",
-  "search": "Rechercher un employé...",
-  "notFound": "Aucun employé trouvé"
-}
-
-
+  "employees": {
+    "loading": "Chargement des employés...",
+    "error": "Erreur lors de la récupération des employés",
+    "noData": "Aucun employé trouvé",
+    "name": "Nom",
+    "gender": "Sexe",
+    "selectGender": "Sélectionner le sexe",
+    "male": "Homme",
+    "female": "Femme",
+    "birth": "Date / Lieu de naissance",
+    "dateOfBirth": "Date de naissance",
+    "placeOfBirth": "Lieu de naissance",
+    "nationality": "Nationalité",
+    "selectNationality": "Sélectionner la nationalité",
+    "status": "Statut",
+    "actions": "Actions",
+    "view": "Voir",
+    "edit": "Modifier",
+    "addNew": "Ajouter un employé",
+    "user": "Utilisateur",
+    "email": "Email",
+    "password": "Mot de passe",
+    "role": "Rôle",
+    "roleDefault": "Employé",
+    "roleAdmin": "Administrateur",
+    "roleManager": "Manager",
+    "identity": "Identité",
+    "firstName": "Prénom",
+    "lastName": "Nom",
+    "contract": "Contrat & Poste",
+    "contractType": "Type de contrat",
+    "selectContract": "Sélectionner le type de contrat",
+    "department": "Département",
+    "selectDepartment": "Sélectionner le département",
+    "baseSalary": "Salaire de base",
+    "position": "Poste",
+    "selectPosition": "Sélectionner le poste",
+    "contractStartDate": "Date de début du contrat",
+    "contractEndDate": "Date de fin du contrat",
+    "employeeCategory": "Catégorie d’employé",
+    "family": "Informations familiales",
+    "maritalStatus": "Statut matrimonial",
+    "selectMaritalStatus": "Sélectionner le statut matrimonial",
+    "single": "Célibataire",
+    "married": "Marié(e)",
+    "widowed": "Veuf(ve)",
+    "spouseName": "Nom du conjoint",
+    "address": "Adresse",
+    "phoneNumbers": "Numéro(s) de téléphone",
+    "bankInfo": "Informations bancaires",
+    "bankName": "Banque",
+    "selectBank": "Sélectionner la banque",
+    "bankAccountNumber": "Numéro de compte",
+    "socialSecurityNumber": "Numéro de sécurité sociale",
+    "insuranceNumber": "Numéro d’assurance",
+    "city": "Ville",
+    "country": "Pays",
+    "storeId": "Magasin",
+    "save": "Enregistrer",
+    "saving": "Enregistrement...",
+    "required": "Champ obligatoire",
+    "passwordMin": "Minimum 6 caractères",
+    "errorSubmit": "Erreur lors de la création de l’employé",
+    "confirmDelete": "Voulez Suprimer l'utilisateur? ",
+    "createUser": "Créer un compte utilisateur",
+    "createUserForEmployee": "Créer des identifiants de connexion pour cet employé",
+    "userCreated": "Le compte utilisateur a été créé et lié à cet employé avec succès",
+    "userExists": "Cet employé a déjà un compte utilisateur",
+    "deteleEmployee": "Supprimer l’employé",
+    "deleteTitle": "Supprimer ",
+    "submit": "Créer",
+    "cancel": "Annuler",
+    "disableUser": "Désactiver le compte utilisateur",
+    "enableUser": "Activer le compte utilisateur",
+    "userDisabled": "Le compte utilisateur a été désactivé",
+    "deleteUser": "Suprimer l'utilisateur",
+    "editEmployee": "Modifier l’employé",
+    "editSuccess": "Employé modifié avec succès",
+    "editError": "Erreur lors de la modification de l’employé",
+    "deleteConfirm": "Voulez-vous vraiment supprimer cet employé ?",
+    "deleteSuccess": "Employé supprimé avec succès",
+    "deleteError": "Erreur lors de la suppression de l’employé",
+    "viewEmployee": "Détails de l’employé",
+    "search": "Rechercher un employé...",
+    "notFound": "Aucun employé trouvé"
+  },
+  "welcomeDashboard": {
+    "title": "Bienvenue dans",
+    "startButton": "Commencer maintenant",
+    "description": "Une plateforme moderne pour les vendeurs, marketeurs et partenaires. Développez vos ventes, gérez vos produits et atteignez de nouveaux clients facilement.",
+    "cards": {
+      "products": {
+        "title": "Produits",
+        "desc": "Ajoutez, gérez et optimisez vos produits pour maximiser vos ventes."
+      },
+      "clients": {
+        "title": "Clients",
+        "desc": "Analysez vos clients et comprenez leurs besoins pour mieux vendre."
+      },
+      "statistics": {
+        "title": "Statistiques",
+        "desc": "Suivez vos performances et améliorez vos stratégies marketing."
+      }
+    },
+    "guidelines": {
+      "motivation": "Voici quelques conseils pour bien démarrer :",
+      "points": [
+        "Tenez toujours vos informations produit à jour",
+        "Interagissez régulièrement avec vos clients",
+        "Surveillez fréquemment vos indicateurs de ventes",
+        "Restez constant et motivé"
+      ]
+    }
+  }
 }
