--- a/public/locales/kr/translation.json
+++ b/public/locales/kr/translation.json
@@ -309,99 +309,114 @@
     "storeImages": "Amafoto y’Iduka",
     "storeImage": "Ifoto y’Iduka"
   },
- "employees": {
-  "loading": "Kuriko kurungika abakozi...",
-  "error": "Ikosa ryabaye mukurungika abakozi",
-  "noData": "Nta mukozi yabonetse",
-
-  "name": "Izina",
-  "gender": "Igitsina",
-  "selectGender": "Hitamwo igitsina",
-  "male": "Umugabo",
-  "female": "Umugore",
-
-  "birth": "Itariki / Ahabereye ivuka",
-  "dateOfBirth": "Itariki y’ivuka",
-  "placeOfBirth": "Ahabereye ivuka",
-  "nationality": "Ubwenegihugu",
-  "selectNationality": "Hitamwo ubwenegihugu",
-
-  "status": "Uruhara",
-  "actions": "Ibikorwa",
-  "view": "Raba",
-  "edit": "Hindura",
-  "addNew": "Ongeramwo Umukozi",
-
-  "user": "Umukoresha",
-  "email": "Imeri",
-  "password": "Ijambo ry’ibanga",
-  "role": "Uruhara",
-  "roleDefault": "Umukozi",
-  "roleAdmin": "Umuyobozi",
-  "roleManager": "Umucungera",
-
-  "identity": "Umwidondoro",
-  "firstName": "Izina ryambere",
-  "lastName": "Izina rya nyuma",
-
-  "contract": "Amasezerano & Icicaro",
-  "contractType": "Ubwoko bw’amasezerano",
-  "selectContract": "Hitamwo ubwoko bw’amasezerano",
-  "department": "Ishami",
-  "selectDepartment": "Hitamwo ishami",
-  "baseSalary": "Umushahara wa mushinge",
-  "position": "Icicaro",
-  "selectPosition": "Hitamwo icicaro",
-  "contractStartDate": "Itariki y’ugutangura amasezerano",
-  "contractEndDate": "Itariki y’ukurangiza amasezerano",
-  "employeeCategory": "Ubwoko bw’umukozi",
-
-  "family": "Amakuru y’umuryango",
-  "maritalStatus": "Ishingiro ry’ingo",
-  "selectMaritalStatus": "Hitamwo ishingiro ry’ingo",
-  "single": "Inyifato imwe",
-  "married": "Yarubatse",
-  "widowed": "Uwapfakaye",
-  "spouseName": "Izina ry’umugabo/umugore",
-  "address": "Aderesi",
-  "phoneNumbers": "Numero ya terefone",
-
-  "bankInfo": "Amakuru ya banki",
-  "bankName": "Banki",
-  "selectBank": "Hitamwo banki",
-  "bankAccountNumber": "Numero ya konti",
-  "socialSecurityNumber": "Numero y’ubwishingizi bw’igihugu",
-  "insuranceNumber": "Numero y’ubwishingizi",
-
-  "city": "Umujyi",
-  "country": "Igihugu",
-  "storeId": "Iduka",
-
-  "save": "Bika",
-  "saving": "Biriko birabikwa...",
-  "required": "Iki kibanza kirakenewe",
-  "passwordMin": "Bikeneye inyuguti 6 canke izirenga",
-  "errorSubmit": "Ikosa mu gukora umukozi",
-  "confirmDelete":"Murashaka gufuta umukozi?",
-
-  "createUser": "Kora konti y’umukoresha",
-  "createUserForEmployee": "Kora ibanga ryo kwinjira kuri uyu mukozi",
-  "userCreated": "Konti y’umukoresha yakozwe kandi irahuza n’uyu mukozi neza",
-  "userExists": "Uyu mukozi asanzwe afise konti y’umukoresha",
-  "deteleEmployee": "Siba umukozi",
-  "deleteTitle": "Siba ",
-
-  "submit": "Kora",
-  "cancel": "Sivya",
-  "editEmployee": "Hindura Umukozi",
-  "editSuccess": "Umukozi yahinduwe neza",
-  "editError": "Ikosa mu guhindura umukozi",
-  "deleteConfirm": "Urashaka koko gusiba uyu mukozi?",
-  "deleteSuccess": "Umukozi yasibwe neza",
-  "deleteError": "Ikosa mu gusiba umukozi",
-  "viewEmployee": "Amakuru y’Umukozi",
-  "search": "Rondera umukozi...",
-  "notFound": "Nta mukozi yabonetse"
-}
-
+  "employees": {
+    "loading": "Kuriko kurungika abakozi...",
+    "error": "Ikosa ryabaye mukurungika abakozi",
+    "noData": "Nta mukozi yabonetse",
+    "name": "Izina",
+    "gender": "Igitsina",
+    "selectGender": "Hitamwo igitsina",
+    "male": "Umugabo",
+    "female": "Umugore",
+    "birth": "Itariki / Ahabereye ivuka",
+    "dateOfBirth": "Itariki y’ivuka",
+    "placeOfBirth": "Ahabereye ivuka",
+    "nationality": "Ubwenegihugu",
+    "selectNationality": "Hitamwo ubwenegihugu",
+    "status": "Uruhara",
+    "actions": "Ibikorwa",
+    "view": "Raba",
+    "edit": "Hindura",
+    "addNew": "Ongeramwo Umukozi",
+    "user": "Umukoresha",
+    "email": "Imeri",
+    "password": "Ijambo ry’ibanga",
+    "role": "Uruhara",
+    "roleDefault": "Umukozi",
+    "roleAdmin": "Umuyobozi",
+    "roleManager": "Umucungera",
+    "identity": "Umwidondoro",
+    "firstName": "Izina ryambere",
+    "lastName": "Izina rya nyuma",
+    "contract": "Amasezerano & Icicaro",
+    "contractType": "Ubwoko bw’amasezerano",
+    "selectContract": "Hitamwo ubwoko bw’amasezerano",
+    "department": "Ishami",
+    "selectDepartment": "Hitamwo ishami",
+    "baseSalary": "Umushahara wa mushinge",
+    "position": "Icicaro",
+    "selectPosition": "Hitamwo icicaro",
+    "contractStartDate": "Itariki y’ugutangura amasezerano",
+    "contractEndDate": "Itariki y’ukurangiza amasezerano",
+    "employeeCategory": "Ubwoko bw’umukozi",
+    "family": "Amakuru y’umuryango",
+    "maritalStatus": "Ishingiro ry’ingo",
+    "selectMaritalStatus": "Hitamwo ishingiro ry’ingo",
+    "single": "Inyifato imwe",
+    "married": "Yarubatse",
+    "widowed": "Uwapfakaye",
+    "spouseName": "Izina ry’umugabo/umugore",
+    "address": "Aderesi",
+    "phoneNumbers": "Numero ya terefone",
+    "bankInfo": "Amakuru ya banki",
+    "bankName": "Banki",
+    "selectBank": "Hitamwo banki",
+    "bankAccountNumber": "Numero ya konti",
+    "socialSecurityNumber": "Numero y’ubwishingizi bw’igihugu",
+    "insuranceNumber": "Numero y’ubwishingizi",
+    "city": "Umujyi",
+    "country": "Igihugu",
+    "storeId": "Iduka",
+    "save": "Bika",
+    "saving": "Biriko birabikwa...",
+    "required": "Iki kibanza kirakenewe",
+    "passwordMin": "Bikeneye inyuguti 6 canke izirenga",
+    "errorSubmit": "Ikosa mu gukora umukozi",
+    "confirmDelete": "Murashaka gufuta umukozi?",
+    "createUser": "Kora konti y’umukoresha",
+    "createUserForEmployee": "Kora ibanga ryo kwinjira kuri uyu mukozi",
+    "userCreated": "Konti y’umukoresha yakozwe kandi irahuza n’uyu mukozi neza",
+    "userExists": "Uyu mukozi asanzwe afise konti y’umukoresha",
+    "deteleEmployee": "Siba umukozi",
+    "deleteTitle": "Siba ",
+    "submit": "Kora",
+    "cancel": "Sivya",
+    "editEmployee": "Hindura Umukozi",
+    "editSuccess": "Umukozi yahinduwe neza",
+    "editError": "Ikosa mu guhindura umukozi",
+    "deleteConfirm": "Urashaka koko gusiba uyu mukozi?",
+    "deleteSuccess": "Umukozi yasibwe neza",
+    "deleteError": "Ikosa mu gusiba umukozi",
+    "viewEmployee": "Amakuru y’Umukozi",
+    "search": "Rondera umukozi...",
+    "notFound": "Nta mukozi yabonetse",
+    "welcomeDashboard": {
+      "title": "Ikaze kuri",
+      "startButton": "Tangira ubu",
+      "description": "Urubuga rigezweho ku bacuruzi, abamamaza n’abafatanyabikorwa. Ongera kugurisha, uyobore ibicuruzwa byawe, kandi ugerere abakiriya bashya byoroshye.",
+      "cards": {
+        "products": {
+          "title": "Ibicuruzwa",
+          "desc": "Ongeraho, uyobore, kandi utezimbere ibicuruzwa byawe kugira ngo ugurishe neza."
+        },
+        "clients": {
+          "title": "Abakiriya",
+          "desc": "Suzuma abakiriya bawe kandi wumve ibyo bakeneye kugira ngo ugurishe neza."
+        },
+        "statistics": {
+          "title": "Ibisata by’ibarurishamibare",
+          "desc": "Kurikirana ibikorwa byawe kandi utezimbere ingamba za marketing."
+        }
+      },
+      "guidelines": {
+        "motivation": "Dore inama zo gutangirira ku rubuga:",
+        "points": [
+          "Buri gihe urinde amakuru y’ibicuruzwa byawe",
+          "Ganira n’abakiriya bawe kenshi",
+          "Kurikirana imibare y’ibicuruzwa byawe kenshi",
+          "Guma ufite consistency kandi uhamye"
+        ]
+      }
+    }
+  }
 }
