--- a/public/locales/sw/translation.json
+++ b/public/locales/sw/translation.json
@@ -273,107 +273,120 @@
     "storeImages": "Picha za Duka",
     "storeImage": "Picha ya duka"
   },
-"employees": {
-  "loading": "Inapakia wafanyakazi...",
-  "error": "Hitilafu wakati wa kupakua wafanyakazi",
-  "noData": "Hakuna mfanyakazi aliyepatikana",
-
-  "name": "Jina",
-  "gender": "Jinsia",
-  "selectGender": "Chagua jinsia",
-  "male": "Mwanaume",
-  "female": "Mwanamke",
-
-  "birth": "Tarehe / Mahali pa kuzaliwa",
-  "dateOfBirth": "Tarehe ya kuzaliwa",
-  "placeOfBirth": "Mahali pa kuzaliwa",
-  "nationality": "Uraia",
-  "selectNationality": "Chagua uraia",
-
-  "status": "Hali",
-  "actions": "Vitendo",
-  "view": "Angalia",
-  "edit": "Hariri",
-  "addNew": "Ongeza Mfanyakazi",
-
-  "user": "Mtumiaji",
-  "email": "Barua pepe",
-  "password": "Nenosiri",
-  "role": "Wajibu",
-  "roleDefault": "Mfanyakazi",
-  "roleAdmin": "Msimamizi",
-  "roleManager": "Meneja",
-
-  "identity": "Utambulisho",
-  "firstName": "Jina la kwanza",
-  "lastName": "Jina la mwisho",
-
-  "contract": "Mkataba & Nafasi",
-  "contractType": "Aina ya mkataba",
-  "selectContract": "Chagua aina ya mkataba",
-  "department": "Idara",
-  "selectDepartment": "Chagua idara",
-  "baseSalary": "Mshahara wa msingi",
-  "position": "Nafasi",
-  "selectPosition": "Chagua nafasi",
-  "contractStartDate": "Tarehe ya kuanza mkataba",
-  "contractEndDate": "Tarehe ya kumalizika mkataba",
-  "employeeCategory": "Kategoria ya mfanyakazi",
-
-  "family": "Taarifa za kifamilia",
-  "maritalStatus": "Hali ya ndoa",
-  "selectMaritalStatus": "Chagua hali ya ndoa",
-  "single": "Hajaoa/Hajaolewa",
-  "married": "Ameoa/Ameolewa",
-  "widowed": "Mjane",
-  "spouseName": "Jina la mwenzi",
-  "address": "Anwani",
-  "phoneNumbers": "Namba ya simu",
-
-  "bankInfo": "Taarifa za benki",
-  "bankName": "Benki",
-  "selectBank": "Chagua benki",
-  "bankAccountNumber": "Namba ya akaunti",
-  "socialSecurityNumber": "Namba ya hifadhi ya jamii",
-  "insuranceNumber": "Namba ya bima",
-
-  "city": "Jiji",
-  "country": "Nchi",
-  "storeId": "Duka",
-
-  "save": "Hifadhi",
-  "saving": "Inahifadhi...",
-  "required": "Sehemu hii ni lazima",
-  "passwordMin": "Angalau herufi 6",
-  "errorSubmit": "Hitilafu wakati wa kuunda mfanyakazi",
-  "confirmDelete":"Je mutaka kufuta mtumishi?",
-
-  "createUser": "Unda akaunti ya mtumiaji",
-  "createUserForEmployee": "Unda kitambulisho cha kuingia kwa mfanyakazi huyu",
-  "userCreated": "Akaunti ya mtumiaji imeundwa na kuunganishwa na mfanyakazi huyu kwa mafanikio",
-  "userExists": "Mfanyakazi huyu tayari ana akaunti ya mtumiaji",
-  "deteleEmployee": "Futa mfanyakazi",
-  "deleteTitle": "Futa ",
-
-  "submit": "Unda",
-  "cancel": "Ghairi",
-
-  "disableUser": "Zima akaunti ya mtumiaji",
-  "enable": "Washa akaunti ya mtumiaji",
-  "userDisabled": "Akaunti ya mtumiaji imezimwa",
-  "userEnabled": "Akaunti ya mtumiaji imewashwa tena",
-  "noUser": "Hakuna akaunti ya mtumiaji imeunganishwa na mfanyakazi huyu",
-  "deleteUser":"Futa",
-
-  "editEmployee": "Hariri Mfanyakazi",
-  "editSuccess": "Mfanyakazi amehaririwa kwa mafanikio",
-  "editError": "Hitilafu wakati wa kuhariri mfanyakazi",
-  "deleteConfirm": "Una hakika unataka kufuta mfanyakazi huyu?",
-  "deleteSuccess": "Mfanyakazi amefutwa kwa mafanikio",
-  "deleteError": "Hitilafu wakati wa kufuta mfanyakazi",
-  "viewEmployee": "Maelezo ya Mfanyakazi",
-  "search": "Tafuta mfanyakazi...",
-  "notFound": "Hakuna mfanyakazi aliyepatikana"
-}
-
+  "employees": {
+    "loading": "Inapakia wafanyakazi...",
+    "error": "Hitilafu wakati wa kupakua wafanyakazi",
+    "noData": "Hakuna mfanyakazi aliyepatikana",
+    "name": "Jina",
+    "gender": "Jinsia",
+    "selectGender": "Chagua jinsia",
+    "male": "Mwanaume",
+    "female": "Mwanamke",
+    "birth": "Tarehe / Mahali pa kuzaliwa",
+    "dateOfBirth": "Tarehe ya kuzaliwa",
+    "placeOfBirth": "Mahali pa kuzaliwa",
+    "nationality": "Uraia",
+    "selectNationality": "Chagua uraia",
+    "status": "Hali",
+    "actions": "Vitendo",
+    "view": "Angalia",
+    "edit": "Hariri",
+    "addNew": "Ongeza Mfanyakazi",
+    "user": "Mtumiaji",
+    "email": "Barua pepe",
+    "password": "Nenosiri",
+    "role": "Wajibu",
+    "roleDefault": "Mfanyakazi",
+    "roleAdmin": "Msimamizi",
+    "roleManager": "Meneja",
+    "identity": "Utambulisho",
+    "firstName": "Jina la kwanza",
+    "lastName": "Jina la mwisho",
+    "contract": "Mkataba & Nafasi",
+    "contractType": "Aina ya mkataba",
+    "selectContract": "Chagua aina ya mkataba",
+    "department": "Idara",
+    "selectDepartment": "Chagua idara",
+    "baseSalary": "Mshahara wa msingi",
+    "position": "Nafasi",
+    "selectPosition": "Chagua nafasi",
+    "contractStartDate": "Tarehe ya kuanza mkataba",
+    "contractEndDate": "Tarehe ya kumalizika mkataba",
+    "employeeCategory": "Kategoria ya mfanyakazi",
+    "family": "Taarifa za kifamilia",
+    "maritalStatus": "Hali ya ndoa",
+    "selectMaritalStatus": "Chagua hali ya ndoa",
+    "single": "Hajaoa/Hajaolewa",
+    "married": "Ameoa/Ameolewa",
+    "widowed": "Mjane",
+    "spouseName": "Jina la mwenzi",
+    "address": "Anwani",
+    "phoneNumbers": "Namba ya simu",
+    "bankInfo": "Taarifa za benki",
+    "bankName": "Benki",
+    "selectBank": "Chagua benki",
+    "bankAccountNumber": "Namba ya akaunti",
+    "socialSecurityNumber": "Namba ya hifadhi ya jamii",
+    "insuranceNumber": "Namba ya bima",
+    "city": "Jiji",
+    "country": "Nchi",
+    "storeId": "Duka",
+    "save": "Hifadhi",
+    "saving": "Inahifadhi...",
+    "required": "Sehemu hii ni lazima",
+    "passwordMin": "Angalau herufi 6",
+    "errorSubmit": "Hitilafu wakati wa kuunda mfanyakazi",
+    "confirmDelete": "Je mutaka kufuta mtumishi?",
+    "createUser": "Unda akaunti ya mtumiaji",
+    "createUserForEmployee": "Unda kitambulisho cha kuingia kwa mfanyakazi huyu",
+    "userCreated": "Akaunti ya mtumiaji imeundwa na kuunganishwa na mfanyakazi huyu kwa mafanikio",
+    "userExists": "Mfanyakazi huyu tayari ana akaunti ya mtumiaji",
+    "deteleEmployee": "Futa mfanyakazi",
+    "deleteTitle": "Futa ",
+    "submit": "Unda",
+    "cancel": "Ghairi",
+    "disableUser": "Zima akaunti ya mtumiaji",
+    "enable": "Washa akaunti ya mtumiaji",
+    "userDisabled": "Akaunti ya mtumiaji imezimwa",
+    "userEnabled": "Akaunti ya mtumiaji imewashwa tena",
+    "noUser": "Hakuna akaunti ya mtumiaji imeunganishwa na mfanyakazi huyu",
+    "deleteUser": "Futa",
+    "editEmployee": "Hariri Mfanyakazi",
+    "editSuccess": "Mfanyakazi amehaririwa kwa mafanikio",
+    "editError": "Hitilafu wakati wa kuhariri mfanyakazi",
+    "deleteConfirm": "Una hakika unataka kufuta mfanyakazi huyu?",
+    "deleteSuccess": "Mfanyakazi amefutwa kwa mafanikio",
+    "deleteError": "Hitilafu wakati wa kufuta mfanyakazi",
+    "viewEmployee": "Maelezo ya Mfanyakazi",
+    "search": "Tafuta mfanyakazi...",
+    "notFound": "Hakuna mfanyakazi aliyepatikana"
+  },
+  "welcomeDashboard": {
+    "title": "Karibu kwenye",
+    "startButton": "Anza Sasa",
+    "description": "Jukwaa la kisasa kwa wauzaji, wauzaji wa masoko, na washirika. Kua mauzo yako, simamia bidhaa zako, na fikia wateja wapya kwa urahisi.",
+    "cards": {
+      "products": {
+        "title": "Bidhaa",
+        "desc": "Ongeza, simamia, na boresha bidhaa zako ili kuongeza mauzo."
+      },
+      "clients": {
+        "title": "Wateja",
+        "desc": "Chambua wateja wako na elewa mahitaji yao ili kuuza vizuri zaidi."
+      },
+      "statistics": {
+        "title": "Takwimu",
+        "desc": "Fuatilia utendaji wako na boresha mikakati yako ya masoko."
+      }
+    },
+    "guidelines": {
+      "motivation": "Hapa kuna vidokezo vya kuanza:",
+      "points": [
+        "Hakikisha taarifa za bidhaa zako zinaendelea kuwa mpya",
+        "Shirikiana na wateja wako mara kwa mara",
+        "Fuatilia vipimo vya mauzo yako mara kwa mara",
+        "Kuwa thabiti na kuwa na motisha"
+      ]
+    }
+  }
 }
